# crewai-customer-agent

./: README.md
errand_agent/: README.md  pyproject.toml
errand_agent/knowledge/: user_preference.txt
errand_agent/src/errand_agent/: crew.py  main.py
errand_agent/src/errand_agent/config/: agents.yaml  tasks.yaml
