[project]
name = "errand_agent"
version = "0.1.0"
description = "errand-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
errand_agent = "errand_agent.main:run"
run_crew = "errand_agent.main:run"
train = "errand_agent.main:train"
replay = "errand_agent.main:replay"
test = "errand_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
